retrieve_ENO_DEV1/objects/Outbound_Manager_Request_Type__mdt.object
<CustomObject>
    <fields>
        <fullName>Business_Error_Codes__c</fullName>
        <label>Business Error Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Max_Retry_Count__c</fullName>
        <label>Max Retry Count</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Class_Name__c</fullName>
        <label>Request Class Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_Type_Name__c</fullName>
        <label>Request Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SObject_Developer_Name__c</fullName>
        <label>SObject Developer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Succeeded_Response_Codes__c</fullName>
        <label>Succeeded Response Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outbound Manager Request Type</label>
    <pluralLabel>Outbound Manager Request Types</pluralLabel>
</CustomObject>